--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jernejovc.bohinj.weather.info"
+    package="com.jernejovc.bohinjweatherinfo"
     android:versionCode="1"
-    android:versionName="1.0~beta2"
+    android:versionName="1.0~beta3"
     android:installLocation="auto" >
 
     <uses-sdk
