--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,13 +6,14 @@
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock">
+        android:theme="@style/Theme.Sherlock" 
+        android:allowBackup="true">
         <activity
             android:name=".BohinjWeatherInfo"
             android:configChanges="orientation|screenSize"
