--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jernejovc.bohinjweatherinfo"
-    android:versionCode="1"
-    android:versionName="1.0~beta3"
+    android:versionCode="2"
+    android:versionName="1.0"
     android:installLocation="auto" >
 
     <uses-sdk
@@ -26,5 +26,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
